<resources>
    <string name="app_name">TAO logs</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="contentDescrip">BackgroundImage</string>
    <string name="login">Login</string>
    <string name="userfinger">Use your fingerprint to login</string>
    <string name="cancel">Cancel</string>
    <string name="sign_in">Sign in</string>
    <string name="fingerprint_description">Use your fingerprint to continue</string>
    <string name="description_fingerprint_icon">Fingerprint icon</string>
    <string name="fingerprint_hint">Touch sensor</string>
    <string name="use_fingerprint_in_future">Use fingerprint in the future</string>
    <string name="password_description">Enter your stored password to continue</string>
    <string name="new_fingerprint_enrolled_description">A new fingerprint was added to this device, so your password is required</string>
    <string name="fingerprint_not_recognized">Fingerprint not recognized. Try again</string>
    <string name="fingerprint_success">Fingerprint recognized</string>
    <string name="use_fingerprint_to_authenticate_key">use_fingerprint_to_authenticate_key</string>
    <string name="use_password">Use password</string>
    <string name="ok">Ok</string>
    <string name="start">Start</string>
    <string name="start_accesible">Start log</string>
    <string name="saved_log">saved_log</string>
    <string name="entryHint">Enter your response here</string>
    <string name="closeAccesibleString">Close this log</string>
    <string-array name="anxietyLogs">
        <item>Anxiety Monitoring Log</item>
        <item>Relaxation Log</item>
        <item>Challenge Log</item>
        <item>Exposure Log</item>
    </string-array>
    <string-array name="behavioralLogs">
        <item>Feeling Log</item>
        <item>Activation Plan</item>
        <item>Rumination Record</item>
    </string-array>
    <string-array name="acceptanceLogs">
        <item>Letting Go Exercise Log</item>
        <item>Mindfulness Log</item>
    </string-array>
    <string-array name="cognitiveLogs">
        <item>Relaxation Log</item>
    </string-array>
    <string-array name="modules">
        <item>Anxiety Logs</item>
        <item>Behavioral Activation</item>
        <item>Acceptance and Commitment Therapy</item>
        <item>Cognitive Behavioral</item>
    </string-array>
    <string-array name="singleChoiceRelaxationLog">
        <item>Deep Breathing</item>
        <item>Progressive Muscle Relaxation</item>
        <item>Guided Imagery</item>
        <item>Mindfulness</item>
    </string-array>
    <string-array name="unhealthyAssumptions">
        <item>All-or-Nothing Thinking</item>
        <item>Discounting the Positive</item>
        <item>Emotionl Reasoning</item>
        <item>Over Generalization</item>
        <item>Jumping to Conclusions</item>
        <item>Labeling</item>
        <item>Magnification</item>
        <item>Mental Filter</item>
        <item>Should Statements</item>
    </string-array>
    <string-array name="unhealthyCoreBeliefs">
        <item>Control</item>
        <item>Responsibility</item>
        <item>Danger</item>
        <item>Failure</item>
        <item>Abandonment</item>
        <item>Entitlement</item>
        <item>Trust</item>
        <item>Personal Worth</item>
    </string-array>
    <string name="title_activity_questionary">Questionary</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="submitVerify">Are you ready to submit?</string>
    <string name="submit">Submit</string>
    <string name="first_time_login">first_time_login</string>
    <string name="errorMessageMultiChoice">Please select something</string>
    <string name="errorMessageEntry">Please enter your response</string>
    <string name="errorMessageSingleChoice">Please select your choice</string>
    <string name="can_continue_log">can_continue_log</string>
    <string name="jsonobject">JSONObject</string>
</resources>
