<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fingerprint_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="8dp"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    android:paddingTop="16dp">

    <TextView
        android:id="@+id/fingerprint_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/fingerprint_description"
        android:textColor="?android:attr/textColorSecondary"/>


    <ImageView
        android:id="@+id/fingerprint_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/fingerprint_description"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_fp_40px"
        android:contentDescription="@string/description_fingerprint_icon"/>

    <TextView
        android:id="@+id/fingerprint_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/fingerprint_icon"
        android:layout_alignTop="@+id/fingerprint_icon"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/fingerprint_icon"
        android:gravity="center_vertical"
        android:text="@string/fingerprint_hint"
        android:textColor="@color/hint_color" />
    <CheckBox
        android:id="@+id/use_fingerprint_in_future_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:checked="false"
        android:visibility="visible"
        android:text="@string/use_fingerprint_in_future"
        android:layout_below="@+id/fingerprint_icon"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>