<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.logs.tao.taologs.Login"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        >
        <RelativeLayout
            android:id="@+id/topView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/taoBackground"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:src="@drawable/background_image"
            />

            <ImageView
                android:id="@+id/logoImage"
                android:layout_width="match_parent"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:paddingTop="16dp"
            >
            <EditText
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/ic_account"
                />
            <EditText
                android:id="@+id/passWord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/ic_lock"/>

            <Button
                android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/login"
                android:backgroundTint="#64B5F6"
                android:textColor="#FFFFFF"/>

        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fingerprintReader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/blue"
        android:src="@drawable/ic_fingerprint"
        app:fabSize="normal"
        app:layout_anchor="@id/topView"
        app:layout_anchorGravity="bottom|right|end"
        app:borderWidth="0dp"
        android:layout_marginRight="16dp"
        android:visibility="invisible"
        android:onClick="startAuthentication"/>

</android.support.design.widget.CoordinatorLayout>
